--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo start --ios --device-id=\"iPhone 16 Pro\"",
     "web": "expo start --web"
   },
   "dependencies": {
